--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -4,6 +4,7 @@ header {
   display: grid;
   grid-template-columns: 15% auto 15%;
   grid-template-rows: 100%;
+  padding: 0 15px;
 }
 
 #eduid-logo {
