--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,7 +1,8 @@
 @import "../variables.scss";
 
 html {
-  margin-left: calc(100vw - 100%);
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
@@ -152,7 +153,7 @@ a {
 }
 
 .intro {
-  margin: 30px 0 0 0;
+  margin: 0 0 30px 0;
 }
 
 /* Main marketing message and sign up button */
